crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@115.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM nummultirange_test WHERE 4.0 <@ nmr;
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "nummultirange_test"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  AExpr@39..49
    AConst@39..42
      Fconst@39..42 "4.0"
    Whitespace@42..43 " "
    Op@43..45 "<@"
    Whitespace@45..46 " "
    ColumnRef@46..49
      Ident@46..49 "nmr"
  Ascii59@49..50 ";"

