crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@116.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM nummultirange_test WHERE range_contained_by_multirange(numrange(4.0, 4.2), nmr);"
---
SelectStmt@0..94
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "nummultirange_test"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  FuncCall@39..92
    Ident@39..68 "range_contained_by_mu ..."
    Ascii40@68..69 "("
    FuncCall@69..86
      Ident@69..77 "numrange"
      Ascii40@77..78 "("
      AConst@78..81
        Fconst@78..81 "4.0"
      Ascii44@81..82 ","
      Whitespace@82..83 " "
      AConst@83..86
        Fconst@83..86 "4.2"
    Ascii41@86..87 ")"
    Ascii44@87..88 ","
    Whitespace@88..89 " "
    ColumnRef@89..92
      Ident@89..92 "nmr"
  Ascii41@92..93 ")"
  Ascii59@93..94 ";"

