crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@117.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM nummultirange_test WHERE numrange(4.0, 4.2) <@ nmr;"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "nummultirange_test"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  AExpr@39..64
    FuncCall@39..56
      Ident@39..47 "numrange"
      Ascii40@47..48 "("
      AConst@48..51
        Fconst@48..51 "4.0"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      AConst@53..56
        Fconst@53..56 "4.2"
    Ascii41@56..57 ")"
    Whitespace@57..58 " "
    Op@58..60 "<@"
    Whitespace@60..61 " "
    ColumnRef@61..64
      Ident@61..64 "nmr"
  Ascii59@64..65 ";"

